# eth-scanner

./: .gitignore  ABOUT.md  README.md  eth-scanner.code-workspace  worker-pc-benchmarks.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: worker-pc-benchmarks.md
docs/analysis/: A01-T070-results.md
docs/api/: ui-development.md
docs/api/tests/: load_test_workers.sh  validate_api_curl.sh
docs/architecture/: brute-force-story.md  db-optimization-proposal.md  system-design-document.md
docs/database/: schema.sql
docs/tasks/: OVERVIEW.md  TEMPLATE.md
docs/tasks/backlog/: A01-T010.md  A01-T030.md  A01-T040.md  A01-T050.md  A01-T055.md  A01-T060.md  A01-T065.md  A01-T070.md  A01-T100.md  A01-T110.md  A01-T120.md  P01-T010.md  P01-T020.md  P01-T030.md  P01-T040.md  P01-T050.md  P01-T060.md  (+89 more)
esp32/: Makefile  README.md  platformio.ini
esp32/components/trezor-crypto/: CMakeLists.txt  rand_esp32.c
esp32/include/: api_client.h  batch_calculator.h  benchmark.h  config.h  core_tasks.h  eth_crypto.h  global_state.h  led_manager.h  nvs_compat.h  nvs_handler.h  shared_types.h  wifi_handler.h
esp32/src/: Kconfig.projbuild  api_client.c  batch_calculator.c  benchmark.c  core_tasks.c  eth_crypto.c  led_manager.c  main.c  nvs_compat.c  nvs_handler.c  wifi_handler.c  wifi_handler.h
esp32/test/: main.h  test_api_client.c  test_batch_calc.c  test_benchmark.c  test_checkpoint.c  test_crypto.c  test_led_manager.c  test_nvs_handler.c  test_nvs_init.c  test_runner.c  test_stubs.c
go/: .golangci.yml  Dockerfile  Makefile  go.mod  go.sum  sqlc.yaml
(+224 files in other folders)
